# pyOpt

./: .gitignore  .pre-commit-config.yaml  CHANGES  INSTALL  LICENSE  MANIFEST.in  QUICKGUIDE  QUICKGUIDE.md  README  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  main.yml  pre-commit.yml
examples/: autorefine.py  groups.py  history.py  nsga2_multi_objective.py  parallel_alpso.py  parallel_gradient.py  parallel_ipopt.py  parallel_midaco.py  parallel_nlpqlp.py  passing_args.py  rosenbrock.py  tp037.py  usersens.py
pyOpt/: __init__.py  pyOpt_constraint.py  pyOpt_gradient.py  pyOpt_history.py  pyOpt_objective.py  pyOpt_optimization.py  pyOpt_optimizer.py  pyOpt_parameter.py  pyOpt_variable.py  setup.py
pyOpt/pyALGENCAN/: LICENSE  README  __init__.py  pyALGENCAN.py  setup.py
pyOpt/pyALGENCAN/source/: README  algconst.par  algencan.bak  algencan.f  algparam.inc  auglag.bak  auglag.f  backtrack.bak  backtrack.f  betra.bak  betra.f  calc.f  cgm.bak  cgm.f  checkder.bak  checkder.f  counters.inc  dim.bak  dim.par  dogleg.bak  dogleg.f  evalal.f  extrap.bak  extrap.f  fixvar.inc  fparam.bak  fparam.f  gencan.bak  gencan.f  graddat.inc  happrox.f  lss.f  moresor.bak  moresor.f  newtd.bak  newtd.f  newtonkkt.bak  newtonkkt.f  outtyp.bak  outtyp.inc  (+15 more)
pyOpt/pyALHSO/: LICENSE  README  __init__.py  alhso.py  pyALHSO.py  setup.py
pyOpt/pyALPSO/: LICENSE  __init__.py  alpso.py  alpso_asy.py  alpso_dpm.py  alpso_poa.py  alpso_spm.py  pyALPSO.py  setup.py
pyOpt/pyCOBYLA/: README  __init__.py  pyCOBYLA.py  setup.py
pyOpt/pyCOBYLA/source/: README  cobyla.bak  cobyla.f  cobylb.bak  cobylb.f  trstlp.f
pyOpt/pyCONMIN/: __init__.py  pyCONMIN.py  setup.py
pyOpt/pyCONMIN/source/: conmin.f
pyOpt/pyFILTERSD/: LICENSE  README  __init__.py  pyFILTERSD.py  setup.py
pyOpt/pyFILTERSD/source/: README  checkd.bak  checkd.f  densea.f  (+8 more)
pyOpt/pyFSQP/: LICENSE  __init__.py  pyFSQP.py  setup.py
pyOpt/pyGCMMA/: LICENSE  README  __init__.py  pyGCMMA.py  setup.py
pyOpt/pyIPOPT/: __init__.py  pyIPOPT.py  setup.py
pyOpt/pyKSOPT/: LICENSE  README  __init__.py  pyKSOPT.py  setup.py
pyOpt/pyMIDACO/: LICENSE  README  __init__.py  pyMIDACO.py  setup.py
pyOpt/pyMMA/: LICENSE  README  __init__.py  pyMMA.py  setup.py
pyOpt/pyMMFD/: LICENSE  README  __init__.py  pyMMFD.py  setup.py
pyOpt/pyNLPQL/: __init__.py  pyNLPQL.py  setup.py
pyOpt/pyNLPQLP/: LICENSE  __init__.py  pyNLPQLP.py  setup.py
pyOpt/pyNSGA2/: __init__.py  pyNSGA2.py  setup.py
pyOpt/pyPSQP/: __init__.py  pyPSQP.py  setup.py
pyOpt/pySDPEN/: LICENSE  README  __init__.py  pySDPEN.py  setup.py
pyOpt/pySLSQP/: __init__.py  pySLSQP.py  setup.py
pyOpt/pySNOPT/: __init__.py  pySNOPT.py  setup.py
pyOpt/pySOLVOPT/: LICENSE  README  __init__.py  pySOLVOPT.py  setup.py
tests/: test_init.py  test_minimizers1.py
util/env/: build-env.yml
(+144 files in other folders)
