[metadata]
name = pyOpt
author = Ruben E. Perez, Peter W. Jansen
author_email = Ruben.Perez@rmc.ca; Peter.Jansen@rmc.ca
maintainer = pyOpt Developers
maintainer_email = Ruben.Perez@rmc.ca; Peter.Jansen@rmc.ca
url = http://pyopt.org/
download_url = https://github.com/madebr/pyOpt
description = Python package for formulating and solving nonlinear constrained optimization problems
long_description = file: README.md
keywords = optimization
license = GNU LGPL
license_files = LICENSE
platforms = Windows,Linux,Mac OS-X,Unix
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: LGPL
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: Education


[options]
packages = find:
install_requires =
    numpy>=1.13.3
python_requires = >=3.7
include_package_data = True
zip_safe = False
