[metadata]
name = pyOpt
description = Python package for formulating and solving nonlinear constrained optimization problems
long_description = file: README.md
long_description_content_type = text/markdown
url = http://pyopt.org/
author = Ruben E. Perez, Peter W. Jansen
author_email = Ruben.Perez@rmc.ca; Peter.Jansen@rmc.ca
maintainer = pyOpt Developers
maintainer_email = Ruben.Perez@rmc.ca; Peter.Jansen@rmc.ca
license = GNU LGPL
license_files = LICENSE
platforms = Windows,Linux,Mac OS-X,Unix
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: LGPL
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Education
    Topic :: Scientific/Engineering
    Topic :: Software Development
download_url = https://github.com/madebr/pyOpt
keywords = optimization

[options]
install_requires =
    numpy>=1.13.3
python_requires = >=3.8
include_package_data = True
zip_safe = False
